--- a/reservations.html
+++ b/reservations.html
@@ -621,7 +621,7 @@
           };
   
           // Send the JSON object to the server using fetch
-          fetch('http://vitvuongvan.shop:8080/food/order', {
+          fetch('http://18.212.5.153:8080/food/order', {
               method: 'POST',
               headers: {
                   'Content-Type': 'application/json'
