--- a/reservations.html
+++ b/reservations.html
@@ -622,7 +622,7 @@
         var xhr = new XMLHttpRequest();
 
         // Configure the request
-        xhr.open("POST", "http://18.212.5.153:8080/food/order");
+        xhr.open("POST", "https://vitvuongvan.shop/food/order");
         xhr.setRequestHeader("Content-Type", "application/json");
 
         // Define the onload function to handle the response
