--- a/reservations.html
+++ b/reservations.html
@@ -463,6 +463,18 @@
                             <form id="contact-form" class="contact">
                               <fieldset class="contact">
                                 <div class="phone">
+                                  <label for="rtb-phone"> Name </label>
+                                  <input
+                                    type="text"
+                                    name="website"
+                                    id="website"
+                                    style="
+                                      width: 100%;
+                                      margin-bottom: 10px !important;
+                                    "
+                                  />
+                                </div>
+                                <div class="phone">
                                   <label for="rtb-phone"> Phone </label>
                                   <input
                                     type="text"
