--- a/reservations.html
+++ b/reservations.html
@@ -618,7 +618,7 @@
           xhr.onload = function () {
             if (xhr.status === 200) {
               var data = JSON.parse(xhr.responseText);
-              alert("Bạn order thành công hệ thống đã nhận được thông tin");
+              alert("Bạn feedback thành công hệ thống đã nhận được thông tin");
               console.log("Success:", data);
               // Handle the response data here
             } else {
